# AutoApply-AI-Smart-Job-Application-Assistant

./: .gitignore  README.md  pyproject.toml
config/: .secrets.yaml  config.yaml
data/: candidate_profile.json
job_application_automation/: .env.example  README.md  demo.py  env.example  init_project.py  requirements.txt  setup.py  test_api_integration.py  test_openrouter_key.py  test_system.py
job_application_automation/config/: __init__.py  browser_config.py  config.py  crawl4ai_config.py  linkedin_mcp_config.py  llama_config.py  logging_config.py
job_application_automation/data/: ats_state.json  candidate_profile.json  job_applications.db
job_application_automation/data/sessions/: linkedin_cookies.json
job_application_automation/migrations/: env.py
job_application_automation/src/: app.py  application_tracker.py  ats_cli.py  ats_integration.py  browser_automation.py  cli.py  database_monitor.py  di.py  init_db.py  input_manager.py  linkedin_integration.py  linkedin_mcp_compat.py  main.py  manage_db.py  models.py  resume_cover_letter_generator.py  resume_optimizer.py  smart_apply.py  vector_database.py  web_scraping.py
job_application_automation/src/cli/: runner.py
job_application_automation/src/config/: __init__.py
job_application_automation/src/core/: job_application.py
job_application_automation/templates/: cover_letter_template.docx  resume_template.docx
job_application_automation/tests/: conftest.py  test_api_integration.py  test_application_tracker.py  test_config.py  test_database.py  test_di.py  test_linkedin_integration.py
(+7 files in other folders)
